[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/scenes/ui/UpgradeItem.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/scripts/ui/UpgradeMenu.gd" type="Script" id=3]

[node name="UpgradeMenu" type="VBoxContainer"]
rect_scale = Vector2( 0.667, 0.667 )
size_flags_vertical = 8
custom_constants/separation = 16
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 189.0
margin_bottom = 187.0
size_flags_vertical = 8

[node name="UpgradeItem" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_right = 189.0
margin_bottom = 52.0

[node name="UpgradeItem2" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 56.0
margin_right = 189.0
margin_bottom = 108.0

[node name="UpgradeItem3" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 112.0
margin_right = 189.0
margin_bottom = 164.0

[node name="NoneAvail" type="Label" parent="VBoxContainer"]
margin_top = 168.0
margin_right = 189.0
margin_bottom = 187.0
theme = ExtResource( 2 )
text = "No Upgrades Available"

[node name="Button" type="Button" parent="."]
margin_left = 61.0
margin_top = 203.0
margin_right = 127.0
margin_bottom = 228.0
size_flags_horizontal = 4
theme = ExtResource( 2 )
text = "Cancel"
